Replace List.of() with Collections.emptyList()